--- a/src/main/resources/ku/cs/register.fxml
+++ b/src/main/resources/ku/cs/register.fxml
@@ -20,7 +20,7 @@
             <Image url="@image/BG01.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="87.0" fitWidth="90.0" layoutX="465.0" layoutY="132.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="87.0" fitWidth="90.0" layoutX="465.0" layoutY="124.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@image/Icon01.png" />
          </image>
@@ -36,9 +36,9 @@
             <Font name="Calibri" size="14.0" />
          </font>
       </Text>
-      <TextField fx:id="firstNameTextField" layoutX="348.0" layoutY="248.0" prefHeight="25.0" prefWidth="150.0" promptText="ชื่อ" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
-      <TextField fx:id="lastNameTextField" layoutX="521.0" layoutY="248.0" prefHeight="25.0" prefWidth="150.0" promptText="นามสกุล" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
-      <TextField fx:id="userNameTextField" layoutX="347.0" layoutY="296.0" prefHeight="28.0" prefWidth="324.0" promptText="ชื่อผู้ใช้ (username)" onKeyReleased="#keyUserName" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
+      <TextField fx:id="firstNameTextField" layoutX="348.0" layoutY="234.0" prefHeight="25.0" prefWidth="150.0" promptText="ชื่อ" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
+      <TextField fx:id="lastNameTextField" layoutX="521.0" layoutY="234.0" prefHeight="25.0" prefWidth="150.0" promptText="นามสกุล" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
+      <TextField fx:id="userNameTextField" layoutX="348.0" layoutY="288.0" onKeyReleased="#keyUserName" prefHeight="28.0" prefWidth="324.0" promptText="ชื่อผู้ใช้ (username)" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
       <Text fill="#828282" layoutX="349.0" layoutY="463.0" strokeType="OUTSIDE" strokeWidth="0.0" text="วันเกิด">
          <font>
             <Font name="Calibri" size="14.0" />
@@ -67,9 +67,9 @@
             <Font name="Calibri" size="14.0" />
          </font>
       </Text>
-      <Text fill="#d9b8b8" layoutX="387.0" layoutY="463.0" strokeType="OUTSIDE" strokeWidth="0.0" text="*วันเกิดจะไม่สามารถแก้ไขได้ในภายหลัง">
+      <Text fill="#f28989" layoutX="387.0" layoutY="463.0" strokeType="OUTSIDE" strokeWidth="0.0" text="*วันเกิดจะไม่สามารถแก้ไขได้ในภายหลัง">
          <font>
-            <Font name="Calibri" size="9.0" />
+            <Font name="Calibri" size="10.0" />
          </font>
       </Text>
       <Button layoutX="517.0" layoutY="637.0" mnemonicParsing="false" onAction="#handleToLoginButton" style="-fx-background-color: FCFCFC;" text="กลับไปที่หน้าล็อกอิน" textFill="#203bc5">
@@ -77,11 +77,30 @@
             <Font size="14.0" />
          </font>
       </Button>
-      <Label fx:id="userNameCheckLabel" layoutX="347.0" layoutY="324.0" textFill="#d2271e" />
-      <Label fx:id="passwordConditionCheckLabel" layoutX="349.0" layoutY="374.0" textFill="#d2271e" />
-      <Label fx:id="passwordCompareLabel" layoutX="349.0" layoutY="425.0" textFill="#d2271e" />
-      <PasswordField fx:id="passwordField" layoutX="348.0" layoutY="346.0" onKeyReleased="#keyPassword" prefHeight="28.0" prefWidth="324.0" promptText="รหัสผ่าน" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
+      <Label fx:id="userNameCheckLabel" layoutX="349.0" layoutY="316.0" textFill="#d2271e">
+         <font>
+            <Font size="9.0" />
+         </font></Label>
+      <Label fx:id="passwordConditionCheckLabel" layoutX="349.0" layoutY="378.0" textFill="#d2271e">
+         <font>
+            <Font size="9.0" />
+         </font></Label>
+      <Label fx:id="passwordCompareLabel" layoutX="349.0" layoutY="425.0" textFill="#d2271e">
+         <font>
+            <Font size="9.0" />
+         </font></Label>
+      <PasswordField fx:id="passwordField" layoutX="348.0" layoutY="350.0" onKeyReleased="#keyPassword" prefHeight="28.0" prefWidth="324.0" promptText="รหัสผ่าน" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
       <PasswordField fx:id="checkPasswordField" layoutX="348.0" layoutY="397.0" onKeyReleased="#keyCheckPassword" prefHeight="28.0" prefWidth="324.0" promptText="ยืนยันรหัสผ่าน" style="-fx-background-color: FFFCF1; -fx-border-color: C9AD88;" />
       <Label fx:id="registerErrorLabel" layoutX="410.0" layoutY="618.0" textAlignment="CENTER" textFill="#d2271e" />
+      <Text fill="#7d7d7d" layoutX="348.0" layoutY="279.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ชื่อผู้ใช้สามารถประกอบด้วยตัวอักษรภาษาอังกฤษและตัวเลข 0-9">
+         <font>
+            <Font name="Calibri" size="10.0" />
+         </font>
+      </Text>
+      <Text fill="#7d7d7d" layoutX="349.0" layoutY="342.0" strokeType="OUTSIDE" strokeWidth="0.0" text="รหัสผ่านต้องประกอบไปด้วยตัวอักษรภาษาอังกฤษและตัวเลข 0-9 มากกว่า 8 หลัก">
+         <font>
+            <Font name="Calibri" size="10.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
