--- a/src/main/resources/ku/cs/home.fxml
+++ b/src/main/resources/ku/cs/home.fxml
@@ -15,7 +15,17 @@
    <children>
       <BorderPane layoutX="-1.0" layoutY="1.0" prefHeight="768.0" prefWidth="1024.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <top>
-            <HBox fx:id="head" prefHeight="69.0" prefWidth="1024.0" BorderPane.alignment="CENTER" />
+            <HBox fx:id="head" prefHeight="69.0" prefWidth="1024.0" BorderPane.alignment="CENTER">
+               <children>
+                  <GridPane fx:id="gridHead">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                  </GridPane>
+               </children></HBox>
          </top>
          <center>
             <GridPane BorderPane.alignment="CENTER">
@@ -37,20 +47,13 @@
                         </ScrollBar>
                      </children>
                   </HBox>
-                  <GridPane GridPane.rowIndex="2">
-                    <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                    </columnConstraints>
+                  <GridPane fx:id="grid" GridPane.rowIndex="2">
                     <rowConstraints>
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
-                     <children>
-                        <HBox prefHeight="174.0" prefWidth="206.0" />
-                     </children>
+                     <GridPane.margin>
+                        <Insets bottom="10.0" left="10.0" top="-5.0" />
+                     </GridPane.margin>
                   </GridPane>
                   <Label prefHeight="22.0" prefWidth="201.0" text="          หนังสือใหม่" textAlignment="CENTER" textFill="RED" GridPane.rowIndex="1">
                      <font>
