--- a/src/main/resources/ku/cs/item.fxml
+++ b/src/main/resources/ku/cs/item.fxml
@@ -11,21 +11,24 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="305.0" prefWidth="180.0" style="-fx-background-color: #fffcf1; -fx-background-radius: 10;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.ItemController">
+<AnchorPane prefHeight="305.0" prefWidth="200.0" style="-fx-background-color: #fffcf1; -fx-background-radius: 10;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.ItemController">
    <children>
       <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <HBox alignment="CENTER" prefHeight="195.0" prefWidth="178.0">
+            <HBox alignment="CENTER" prefHeight="200.0" prefWidth="500.0">
                <children>
                   <ImageView fx:id="img" fitHeight="150.0" fitWidth="120.0" pickOnBounds="true" preserveRatio="true">
                      <HBox.margin>
                         <Insets />
                      </HBox.margin>
                      <image>
-                        <Image url="@image/book11_horimiya_cartoon.jpg" />
+                        <Image url="@image/book10_horimiya_cartoon.jpg" />
                      </image>
                   </ImageView>
                </children>
+               <opaqueInsets>
+                  <Insets left="10.0" />
+               </opaqueInsets>
             </HBox>
             <HBox alignment="CENTER_LEFT" prefHeight="24.0" prefWidth="200.0">
                <children>
@@ -34,12 +37,12 @@
                         <Insets left="10.0" />
                      </HBox.margin>
                      <font>
-                        <Font name="JasmineUPC" size="12.0" />
+                        <Font name="JasmineUPC" size="18.0" />
                      </font>
                   </Text>
                   <Label fx:id="bookNameLabel" text="booknameLabel">
                      <font>
-                        <Font name="JasmineUPC" size="12.0" />
+                        <Font name="JasmineUPC" size="18.0" />
                      </font>
                      <HBox.margin>
                         <Insets bottom="3.0" left="10.0" />
@@ -51,7 +54,7 @@
                <children>
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="ราคา">
                      <font>
-                        <Font name="JasmineUPC" size="12.0" />
+                        <Font name="JasmineUPC" size="18.0" />
                      </font>
                      <HBox.margin>
                         <Insets left="10.0" />
@@ -59,7 +62,7 @@
                   </Text>
                   <Label fx:id="bookPriceLabel" text="bookPriceLabel">
                      <font>
-                        <Font name="JasmineUPC" size="12.0" />
+                        <Font name="JasmineUPC" size="18.0" />
                      </font>
                      <HBox.margin>
                         <Insets bottom="3.0" left="27.0" />
@@ -71,7 +74,7 @@
                <children>
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="ร้านค้า">
                      <font>
-                        <Font name="JasmineUPC" size="12.0" />
+                        <Font name="JasmineUPC" size="19.0" />
                      </font>
                      <HBox.margin>
                         <Insets left="10.0" />
@@ -79,19 +82,22 @@
                   </Text>
                   <Label fx:id="bookShopLabel" text="bookShopLabel">
                      <font>
-                        <Font name="JasmineUPC" size="12.0" />
+                        <Font name="JasmineUPC" size="19.0" />
                      </font>
                      <HBox.margin>
                         <Insets bottom="3.0" left="23.0" />
                      </HBox.margin>
                   </Label>
                </children>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
             </HBox>
             <HBox alignment="CENTER_RIGHT" prefHeight="38.0" prefWidth="200.0">
                <children>
-                  <Button fx:id= "handleSeeFullDetailButton" mnemonicParsing="false" style="-fx-background-color: #e1c272; -fx-background-radius: 5;" text="รายละเอียดเพิ่มเติม" textFill="WHITE" onAction= "#handleSeeFullDetailButton">
+                  <Button fx:id="handleSeeFullDetailButton" mnemonicParsing="false" onAction="#handleSeeFullDetailButton" style="-fx-background-color: #e1c272; -fx-background-radius: 5;" text="รายละเอียดเพิ่มเติม" textFill="WHITE">
                      <font>
-                        <Font name="JasmineUPC" size="12.0" />
+                        <Font name="JasmineUPC" size="17.0" />
                      </font>
                      <HBox.margin>
                         <Insets right="10.0" />
