--- a/src/main/resources/ku/cs/stock.fxml
+++ b/src/main/resources/ku/cs/stock.fxml
@@ -92,9 +92,9 @@
             <Font name="JasmineUPC Bold" size="36.0" />
          </font>
       </Label>
-      <Button layoutX="536.0" layoutY="193.0" mnemonicParsing="false" style="-fx-background-color: F99F28;" text="แก้ไขข้อมูล" textFill="WHITE">
+      <Button layoutX="573.0" layoutY="194.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="102.0" style="-fx-background-color: F99F28;" text="แก้ไขข้อมูล" textFill="WHITE">
          <font>
-            <Font size="18.0" />
+            <Font name="JasmineUPC" size="18.0" />
          </font>
       </Button>
    </children>
