--- a/src/main/resources/ku/cs/aboutUs.fxml
+++ b/src/main/resources/ku/cs/aboutUs.fxml
@@ -1,21 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.shape.Line?>
-<?import javafx.scene.shape.Rectangle?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: C9AD88;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.AboutUsController">
+<AnchorPane prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: C9AD88;" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ku.cs.shop.controllers.AboutUsController">
    <children>
       <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#ffffffcb" height="728.0" strokeType="INSIDE" width="994.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="20.0" />
       <Line endX="827.9595336914062" endY="-7.62939453125E-6" layoutX="144.0" layoutY="65.0" startX="-100.0" AnchorPane.leftAnchor="42.0" AnchorPane.rightAnchor="42.0" />
-      <Button layoutX="31.0" layoutY="32.0" mnemonicParsing="false" style="-fx-background-color: transparent;" text="เกี่ยวกับกลุ่มผู้พัฒนา">
+      <Button fx:id="aboutUsButton" layoutX="31.0" layoutY="32.0" mnemonicParsing="false" onAction="#handleAboutUsButton" style="-fx-background-color: transparent;" text="เกี่ยวกับกลุ่มผู้พัฒนา">
          <font>
             <Font name="JasmineUPC" size="24.0" />
          </font>
@@ -33,7 +27,7 @@
             <HBox prefHeight="30.0" prefWidth="200.0" />
             <HBox prefHeight="371.0" prefWidth="200.0">
                <children>
-                  <GridPane prefHeight="371.0" prefWidth="0.0">
+                  <GridPane fx:id="gridInfo" prefHeight="371.0" prefWidth="0.0">
                     <rowConstraints>
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -44,7 +38,7 @@
          </children>
       </VBox>
       <Line endX="100.0" layoutX="120.0" layoutY="50.0" rotate="90.0" startX="81.24583435058594" startY="0.41674506664276123" />
-      <Button layoutX="211.0" layoutY="32.0" mnemonicParsing="false" style="-fx-background-color: transparent;" text="ข้อมูลผู้พัฒนา">
+      <Button fx:id="adminInfoButton" layoutX="211.0" layoutY="32.0" mnemonicParsing="false" onAction="#handleAdminInfoButton" style="-fx-background-color: transparent;" text="ข้อมูลผู้พัฒนา">
          <font>
             <Font name="JasmineUPC" size="24.0" />
          </font>
